--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
         "linebreak-style": 0,
         "no-underscore-dangle": 0 ,
         "max-len" : 0,
-        "no-console":0
+        "no-console":0,
+        "padded-blocks":0
     }
   }
