--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "author": "Felipe Arce",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.0",
     "express-routemap": "^1.6.0",
+    "express-session": "^1.17.3",
     "mongoose": "^7.4.1",
     "mongoose-paginate-v2": "^1.7.31"
   },
