--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Felipe Arce",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -23,7 +24,8 @@
     "express-routemap": "^1.6.0",
     "express-session": "^1.17.3",
     "mongoose": "^7.4.1",
-    "mongoose-paginate-v2": "^1.7.31"
+    "mongoose-paginate-v2": "^1.7.31",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
