--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.4.1",
     "mongoose-paginate-v2": "^1.7.31",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
