--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
         "max-len" : 0,
         "no-console":0,
         "padded-blocks":0,
-        "func-names":0
+        "func-names":0,
+        "class-methods-use-this":0
     }
   }
