--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^7.4.1",
     "mongoose-paginate-v2": "^1.7.31",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0"
