--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
