--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         "no-console":0,
         "padded-blocks":0,
         "func-names":0,
-        "class-methods-use-this":0
+        "class-methods-use-this":0,
+        "import/no-extraneous-dependencies":0
     }
   }
