--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-compression": "^1.0.2",
     "express-handlebars": "^7.1.0",
     "express-routemap": "^1.6.0",
     "express-session": "^1.17.3",
+    "http-status-codes": "^2.2.0",
     "mongoose": "^7.4.1",
     "mongoose-paginate-v2": "^1.7.31",
     "multer": "^1.4.5-lts.1",
@@ -33,6 +35,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "cross-env": "^7.0.3",
     "eslint": "^8.46.0",
     "eslint-config-airbnb-base": "^15.0.0",
