--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ node_modules
 .env.development.local
 .env.production.local
 .env.test.local
+error-prod.log
+error-qa.log
+error-test.log
+errors.log
+
