🚧 Initialized: Initialized test logger in api/carts , gitignore and change in script of starts:

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start:prod": "cross-env NODE_ENV=production nodemon ./src/app.js",
+    "start:prod": "cross-env NODE_ENV=prod nodemon ./src/app.js",
     "start:qa": "cross-env NODE_ENV=qa nodemon ./src/app.js",
-    "start:dev": "cross-env NODE_ENV=development nodemon ./src/app.js",
+    "start:dev": "cross-env NODE_ENV=dev nodemon ./src/app.js",
     "start:test": "cross-env NODE_ENV=test nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
