--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start:qa": "cross-env NODE_ENV=qa nodemon ./src/app.js",
     "start:dev": "cross-env NODE_ENV=dev nodemon ./src/app.js",
     "start:test": "cross-env NODE_ENV=test nodemon ./src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/supertest.test.js",
+    "test:single": "mocha --watch --timeout 30000"
   },
   "keywords": [],
   "author": "Felipe Arce",
@@ -40,10 +41,13 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
+    "chai": "^4.3.10",
     "cross-env": "^7.0.3",
     "eslint": "^8.46.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
-    "nodemon": "^3.0.1"
+    "mocha": "^10.2.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   }
 }
