--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,38 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "node": true
-    },
-    "extends": "airbnb-base",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "rules": {
-        "import/extensions": [
-          "error",
-          "ignorePackages",
-          {
-            "js": "always"
-          }
-        ],
-        "linebreak-style": 0,
-        "no-underscore-dangle": 0 ,
-        "max-len" : 0,
-        "no-console":0,
-        "padded-blocks":0,
-        "func-names":0,
-        "class-methods-use-this":0,
-        "import/no-extraneous-dependencies":0
-    }
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": "airbnb-base",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "always"
+      }
+    ],
+    "linebreak-style": 0,
+    "no-underscore-dangle": 0,
+    "max-len": 0,
+    "no-console": 0,
+    "padded-blocks": 0,
+    "func-names": 0,
+    "class-methods-use-this": 0,
+    "import/no-extraneous-dependencies": 0,
+    "object-curly-newline": [
+      "error",
+      {
+        "ObjectExpression": { "consistent": true, "multiline": true },
+        "ObjectPattern": { "consistent": true, "multiline": true },
+        "ImportDeclaration": "never",
+        "ExportDeclaration": { "multiline": true, "minProperties": 3 }
+      }
+    ]
   }
+}
