--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
+    "autoprefixer": "^10.4.16",
     "chai": "^4.3.10",
     "cross-env": "^7.0.3",
     "eslint": "^8.46.0",
@@ -51,7 +52,9 @@
     "eslint-plugin-import": "^2.28.0",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
+    "postcss": "^8.4.32",
     "sinon": "^16.1.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "tailwindcss": "^3.4.0"
   }
 }
