--- a/src/docs/carts/carts.yml
+++ b/src/docs/carts/carts.yml
@@ -161,3 +161,5 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/CartItem'
+          description: ID generado al crear el usuario
+
