feat: agregar SESSION_SECRET al archivo EJEMPLO

--- a/.env.dev.local.example
+++ b/.env.dev.local.example
@@ -11,3 +11,4 @@ PSW_EMAIL=example
 BASE_URL=http://localhost:8080/
 CLOUDINARYAPISECRET=example
 COLLECTION_NAME=products
+SESSION_SECRET=mi_clave_secreta_de_ejemplo
