feat: add CORS_ORIGIN and SESSION_SECRET to environment config

--- a/.env.dev.local.example
+++ b/.env.dev.local.example
@@ -12,3 +12,4 @@ BASE_URL=http://localhost:8080/
 CLOUDINARYAPISECRET=example
 COLLECTION_NAME=products
 SESSION_SECRET=mi_clave_secreta_de_ejemplo
+CORS_ORIGIN=*
