feat: reorganize example environment variables

--- a/.env.dev.local.example
+++ b/.env.dev.local.example
@@ -1,15 +1,27 @@
+# 1. Application environment and port
+NODE_ENV=dev
 PORT=8080
-DB_CNN=mongodb+srv://example.example@pruebas-tecnicas.lhe51.mongodb.net/
+BASE_URL=http://localhost:8080/
+
+# 2. Database configuration
 DB_HOST=localhost
 DB_NAME=ecommerce
-NODE_ENV=dev
+DB_CNN=mongodb+srv://example.example@pruebas-tecnicas.lhe51.mongodb.net/
+COLLECTION_NAME=products
+PERSISTENCE=MONGO
+
+# 3. Authentication and security
+SESSION_SECRET=mi_clave_secreta_de_ejemplo
 GITHUB_CLIENT_ID=example
 GITHUB_CLIENT_SECRET=example
-PERSISTENCE=MONGO
+
+# 4. Email configuration
 EMAIL=example@gmail.com
 PSW_EMAIL=example
-BASE_URL=http://localhost:8080/
+
+# 5. Cloudinary configuration
 CLOUDINARYAPISECRET=example
-COLLECTION_NAME=products
-SESSION_SECRET=mi_clave_secreta_de_ejemplo
+
+# 6. CORS configuration
 CORS_ORIGIN=*
+METHOD_ORIGINS=GET,PUT,POST,DELETE
