--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.41.1",
+    "compression": "^1.8.0",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-compression": "^1.0.2",
     "express-handlebars": "^7.1.0",
     "express-routemap": "^1.6.0",
     "express-session": "^1.17.3",
